--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,13 +38,14 @@ jobs:
     needs: build  # Esto asegura que el paso "build" se ejecute primero
 
     steps:
-        - name: Acceso SSH y despliegue
-          run: |
-            sshpass -p "_HPH24@Assh" ssh -o StrictHostKeyChecking=no root@178.16.142.77 << EOF
-              cd /home/incidentstream-back/htdocs/incident-backend
-              git pull origin main
-              pnpm install
-            EOF
-          env:
-            SSHPASS: _HPH24@Assh
-          shell: bash
+    - name: Acceso SSH y despliegue
+      run: |
+        sshpass -p "_HPH24@Assh" ssh -o StrictHostKeyChecking=no root@178.16.142.77 << EOF
+          cd /home/incidentstream-back/htdocs/incident-backend
+          git pull origin main
+          npm install -g pnpm  # Instala pnpm en el servidor remoto
+          pnpm install
+        EOF
+      env:
+        SSHPASS: _HPH24@Assh
+      shell: bash
