--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "firebase-admin": "^13.1.0",
     "ioredis": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
     "localizedFormat": "link:dayjs\\plugin\\localizedFormat",
