--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "firebase-admin": "^13.1.0",
     "ioredis": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
